--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,12 @@ authors = [
     {name = "Mohud Al-Bazzaz",email = "mohudalbazzaz@yahoo.co.uk"}
 ]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12"
 dependencies = [
     "fastapi (>=0.128.0,<0.129.0)",
     "redis (>=7.1.0,<8.0.0)",
     "uvicorn (>=0.40.0,<0.41.0)",
+    "dotenv (>=0.9.9,<0.10.0)",
 ]
 
 [tool.poetry]
